@@ -1,5 +1,8 @@
 2007-06-05  Inge Wallin  <inge@lysator.liu.se>
 
+	Krazy: 17: Check for inappropriate pass-by-value function args
+	* src/lib/kml/KMLFeature.{h,cpp}: Pass QStrings by const reference
+
 	Krazy:  4: Check for an acceptable copyright
 	Krazy: 14: Check for an acceptable license
 	* src/lib/kml/KMLObject.{h,cpp}:  Add header w/ copyright and license
